recursion.cons.lessons.recursion.cons.Concat.scala.error
concat:4: error: not found: value con
			con
                        ^concat:3: error: type mismatch;
 found   : Unit
 required: List[Int]
		if(l2==Nil){
                ^concat:2: error: type mismatch;
 found   : Unit
 required: List[Int]
	if(l1==Nil){
        ^